@@ -1,21 +1,29 @@
 --- #YAML:1.0
 name:               End
-version:            2009081101
-abstract:           ~
+version:            2009110401
+abstract:           generalized END {}.
 author:
     - Abigail <cpan@abigail.be>
-license:            unknown
+license:            mit
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
     ExtUtils::MakeMaker:  0
-requires:  {}
+requires:
+    Exporter:  0
+    perl:      5.006
+    strict:    0
+    warnings:  0
+resources:
+    repository:  git://github.com/Abigail/end.git
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
+keywords:  []
+test_requires:  {}
